message(STATUS "==== Engine ====")

SET(LUMIX_ENGINE_INCLUDE
        ${LUMIX_INCLUDE}
        ${LUA_INCLUDE}
        ${IMGUI_INCLUDE}
        CACHE INTERNAL "Lumix Engine Include")

include_directories(
        ${LUMIX_INCLUDE}
        ${LUA_INCLUDE}
        ${IMGUI_INCLUDE})


set(SOURCE_FILES
        array.h
        associative_array.h
        base_proxy_allocator.h
        binary_array.cpp
        blob.cpp
        blob.h
        command_line_parser.h
        crc32.cpp
        crc32.h
        default_allocator.cpp
        default_allocator.h
        delegate.h
        delegate_list.h
        engine.cpp
        engine.h
        fibers.h
        free_list.h
        geometry.cpp
        geometry.h
        hash_map.h
        iallocator.h
        input_system.h
        iplugin.cpp
        iplugin.h
        iproperty_descriptor.h
        job_system.cpp
        job_system.h
        json_serializer.cpp
        json_serializer.h
        lifo_allocator.h
        log.cpp
        log.h
        lua_wrapper.h
        lumix.h
        math_utils.cpp
        math_utils.h
        matrix.cpp
        matrix.h
        network.h
        no_resources.cpp
        path.cpp
        path.h
        path_utils.cpp
        path_utils.h
        plugin_manager.cpp
        plugin_manager.h
        prefab.h
        profiler.cpp
        profiler.h
        property_descriptor.cpp
        property_descriptor.h
        property_register.cpp
        property_register.h
        quat.cpp
        queue.h
        resource.cpp
        resource.h
        resource_manager.cpp
        resource_manager.h
        resource_manager_base.cpp
        resource_manager_base.h
        resources.cpp
        serializer.cpp
        serializer.h
        simd.h
        string.cpp
        string.h
        system.h
        timer.h
        vec.cpp
        vec.h
        debug/linux/debug.cpp
        debug/linux/floating_points.cpp
        debug/debug.h
        debug/floating_points.h
        fs/disk_file_device.cpp
        fs/disk_file_device.h
        fs/file_events_device.cpp
        fs/file_events_device.h
        fs/file_system.cpp
        fs/file_system.h
        fs/ifile_device.h
        fs/memory_file_device.cpp
        fs/memory_file_device.h
        fs/os_file.h
        fs/pack_file_device.cpp
        fs/pack_file_device.h
        fs/resource_file_device.cpp
        fs/resource_file_device.h
        fs/tcp_file_device.cpp
        fs/tcp_file_device.h
        fs/tcp_file_server.cpp
        fs/tcp_file_server.h
        fs/linux/os_file.cpp
        linux/fibers.cpp
        linux/input_system.cpp
        linux/network.cpp
        linux/system.cpp
        linux/timer.cpp
        mt/atomic.h
        mt/lock_free_fixed_queue.h
        mt/sync.h
        mt/task.h
        mt/thread.h
        mt/transaction.h
        mt/linux/atomic.cpp
        mt/linux/sync.cpp
        mt/linux/task.cpp
        mt/linux/thread.cpp
        universe/component.cpp
        universe/component.h
        universe/universe.cpp
        universe/universe.h
        )

add_library(LumixEngine STATIC ${SOURCE_FILES})